monero_libwallet2_api_c/src/main/cpp/wallet2_api_c.h

//     virtual int lookupPaymentID(const std::string &payment_id) const = 0;
extern ADDAPI int MONERO_AddressBook_lookupPaymentID(void* addressBook_ptr, const char* payment_id);
// };
// struct CoinsInfo
// {
//     virtual ~CoinsInfo() = 0;
//     virtual uint64_t blockHeight() const = 0;
extern ADDAPI uint64_t MONERO_CoinsInfo_blockHeight(void* coinsInfo_ptr);
//     virtual std::string hash() const = 0;
extern ADDAPI const char* MONERO_CoinsInfo_hash(void* coinsInfo_ptr);
//     virtual size_t internalOutputIndex() const = 0;
extern ADDAPI size_t MONERO_CoinsInfo_internalOutputIndex(void* coinsInfo_ptr);
//     virtual uint64_t globalOutputIndex() const = 0;
extern ADDAPI uint64_t MONERO_CoinsInfo_globalOutputIndex(void* coinsInfo_ptr);
//     virtual bool spent() const = 0;
extern ADDAPI bool MONERO_CoinsInfo_spent(void* coinsInfo_ptr);
//     virtual bool frozen() const = 0;
extern ADDAPI bool MONERO_CoinsInfo_frozen(void* coinsInfo_ptr);
//     virtual uint64_t spentHeight() const = 0;
extern ADDAPI uint64_t MONERO_CoinsInfo_spentHeight(void* coinsInfo_ptr);
//     virtual uint64_t amount() const = 0;
extern ADDAPI uint64_t MONERO_CoinsInfo_amount(void* coinsInfo_ptr);
//     virtual bool rct() const = 0;
extern ADDAPI bool MONERO_CoinsInfo_rct(void* coinsInfo_ptr);
//     virtual bool keyImageKnown() const = 0;
extern ADDAPI bool MONERO_CoinsInfo_keyImageKnown(void* coinsInfo_ptr);
//     virtual size_t pkIndex() const = 0;
extern ADDAPI size_t MONERO_CoinsInfo_pkIndex(void* coinsInfo_ptr);
//     virtual uint32_t subaddrIndex() const = 0;
extern ADDAPI uint32_t MONERO_CoinsInfo_subaddrIndex(void* coinsInfo_ptr);
//     virtual uint32_t subaddrAccount() const = 0;
extern ADDAPI uint32_t MONERO_CoinsInfo_subaddrAccount(void* coinsInfo_ptr);
//     virtual std::string address() const = 0;
extern ADDAPI const char* MONERO_CoinsInfo_address(void* coinsInfo_ptr);
//     virtual std::string addressLabel() const = 0;
extern ADDAPI const char* MONERO_CoinsInfo_addressLabel(void* coinsInfo_ptr);
//     virtual std::string keyImage() const = 0;
extern ADDAPI const char* MONERO_CoinsInfo_keyImage(void* coinsInfo_ptr);
//     virtual uint64_t unlockTime() const = 0;
extern ADDAPI uint64_t MONERO_CoinsInfo_unlockTime(void* coinsInfo_ptr);
//     virtual bool unlocked() const = 0;
extern ADDAPI bool MONERO_CoinsInfo_unlocked(void* coinsInfo_ptr);
//     virtual std::string pubKey() const = 0;
extern ADDAPI const char* MONERO_CoinsInfo_pubKey(void* coinsInfo_ptr);
//     virtual bool coinbase() const = 0;
extern ADDAPI bool MONERO_CoinsInfo_coinbase(void* coinsInfo_ptr);
//     virtual std::string description() const = 0;
extern ADDAPI const char* MONERO_CoinsInfo_description(void* coinsInfo_ptr);
// };
// struct Coins
// {
//     virtual ~Coins() = 0;
//     virtual int count() const = 0;
extern ADDAPI int MONERO_Coins_count(void* coins_ptr);
//     virtual CoinsInfo * coin(int index)  const = 0;
extern ADDAPI void* MONERO_Coins_coin(void* coins_ptr, int index);
//     virtual std::vector<CoinsInfo*> getAll() const = 0;
extern ADDAPI int MONERO_Coins_getAll_size(void* coins_ptr);
extern ADDAPI void* MONERO_Coins_getAll_byIndex(void* coins_ptr, int index);
//     virtual void refresh() = 0;
extern ADDAPI void MONERO_Coins_refresh(void* coins_ptr);
//     virtual void setFrozen(std::string public_key) = 0;
extern ADDAPI void MONERO_Coins_setFrozenByPublicKey(void* coins_ptr, const char* public_key);
//     virtual void setFrozen(int index) = 0;
extern ADDAPI void MONERO_Coins_setFrozen(void* coins_ptr, int index);
//     virtual void thaw(int index) = 0;
extern ADDAPI void MONERO_Coins_thaw(void* coins_ptr, int index);
//     virtual void thaw(std::string public_key) = 0;
extern ADDAPI void MONERO_Coins_thawByPublicKey(void* coins_ptr, const char* public_key);
//     virtual bool isTransferUnlocked(uint64_t unlockTime, uint64_t blockHeight) = 0;
extern ADDAPI bool MONERO_Coins_isTransferUnlocked(void* coins_ptr, uint64_t unlockTime, uint64_t blockHeight);
//    virtual void setDescription(const std::string &public_key, const std::string &description) = 0;
extern ADDAPI void MONERO_Coins_setDescription(void* coins_ptr, const char* public_key, const char* description);
// };
// struct SubaddressRow {
// public:
//     SubaddressRow(std::size_t _rowId, const std::string &_address, const std::string &_label):
//         m_rowId(_rowId),
//         m_address(_address),
//         m_label(_label) {}
 
// private:
//     std::size_t m_rowId;
//     std::string m_address;
//     std::string m_label;
// public:
//     std::string extra;
extern ADDAPI const char* MONERO_SubaddressRow_extra(void* subaddressRow_ptr);
//     std::string getAddress() const {return m_address;}
extern ADDAPI const char* MONERO_SubaddressRow_getAddress(void* subaddressRow_ptr);
//     std::string getLabel() const {return m_label;}
extern ADDAPI const char* MONERO_SubaddressRow_getLabel(void* subaddressRow_ptr);
//     std::size_t getRowId() const {return m_rowId;}
extern ADDAPI size_t MONERO_SubaddressRow_getRowId(void* subaddressRow_ptr);
// };

// struct Subaddress
// {
//     virtual ~Subaddress() = 0;
//     virtual std::vector<SubaddressRow*> getAll() const = 0;
extern ADDAPI int MONERO_Subaddress_getAll_size(void* subaddress_ptr);
extern ADDAPI void* MONERO_Subaddress_getAll_byIndex(void* subaddress_ptr, int index);
//     virtual void addRow(uint32_t accountIndex, const std::string &label) = 0;
extern ADDAPI void MONERO_Subaddress_addRow(void* subaddress_ptr, uint32_t accountIndex, const char* label);
//     virtual void setLabel(uint32_t accountIndex, uint32_t addressIndex, const std::string &label) = 0;
extern ADDAPI void MONERO_Subaddress_setLabel(void* subaddress_ptr, uint32_t accountIndex, uint32_t addressIndex, const char* label);
//     virtual void refresh(uint32_t accountIndex) = 0;
extern ADDAPI void MONERO_Subaddress_refresh(void* subaddress_ptr, uint32_t accountIndex);
// };

// struct SubaddressAccountRow {
// public:
//     SubaddressAccountRow(std::size_t _rowId, const std::string &_address, const std::string &_label, const std::string &_balance, const std::string &_unlockedBalance):
//         m_rowId(_rowId),
//         m_address(_address),
//         m_label(_label),
//         m_balance(_balance),
//         m_unlockedBalance(_unlockedBalance) {}

// private:
//     std::size_t m_rowId;
//     std::string m_address;
//     std::string m_label;
//     std::string m_balance;
//     std::string m_unlockedBalance;
// public:
//     std::string extra;
extern ADDAPI const char* MONERO_SubaddressAccountRow_extra(void* subaddressAccountRow_ptr);
//     std::string getAddress() const {return m_address;}
extern ADDAPI const char* MONERO_SubaddressAccountRow_getAddress(void* subaddressAccountRow_ptr);
//     std::string getLabel() const {return m_label;}
extern ADDAPI const char* MONERO_SubaddressAccountRow_getLabel(void* subaddressAccountRow_ptr);
//     std::string getBalance() const {return m_balance;}
extern ADDAPI const char* MONERO_SubaddressAccountRow_getBalance(void* subaddressAccountRow_ptr);
//     std::string getUnlockedBalance() const {return m_unlockedBalance;}
extern ADDAPI const char* MONERO_SubaddressAccountRow_getUnlockedBalance(void* subaddressAccountRow_ptr);
//     std::size_t getRowId() const {return m_rowId;}
extern ADDAPI size_t MONERO_SubaddressAccountRow_getRowId(void* subaddressAccountRow_ptr);
// };

// struct SubaddressAccount
// {
//     virtual ~SubaddressAccount() = 0;
//     virtual std::vector<SubaddressAccountRow*> getAll() const = 0;
extern ADDAPI int MONERO_SubaddressAccount_getAll_size(void* subaddressAccount_ptr);
extern ADDAPI void* MONERO_SubaddressAccount_getAll_byIndex(void* subaddressAccount_ptr, int index);
//     virtual void addRow(const std::string &label) = 0;
extern ADDAPI void MONERO_SubaddressAccount_addRow(void* subaddressAccount_ptr, const char* label);
//     virtual void setLabel(uint32_t accountIndex, const std::string &label) = 0;
extern ADDAPI void MONERO_SubaddressAccount_setLabel(void* subaddressAccount_ptr, uint32_t accountIndex, const char* label);
//     virtual void refresh() = 0;
extern ADDAPI void MONERO_SubaddressAccount_refresh(void* subaddressAccount_ptr);
// };

// struct MultisigState {
//     MultisigState() : isMultisig(false), isReady(false), threshold(0), total(0) {}

//     bool isMultisig;
extern ADDAPI bool MONERO_MultisigState_isMultisig(void* multisigState_ptr);
//     bool isReady;
extern ADDAPI bool MONERO_MultisigState_isReady(void* multisigState_ptr);
//     uint32_t threshold;
extern ADDAPI uint32_t MONERO_MultisigState_threshold(void* multisigState_ptr);
//     uint32_t total;
extern ADDAPI uint32_t MONERO_MultisigState_total(void* multisigState_ptr);
// };


// struct DeviceProgress {
//     DeviceProgress(): m_progress(0), m_indeterminate(false) {}
//     DeviceProgress(double progress, bool indeterminate=false): m_progress(progress), m_indeterminate(indeterminate) {}

//     virtual double progress() const { return m_progress; }
extern ADDAPI bool MONERO_DeviceProgress_progress(void* deviceProgress_ptr);
//     virtual bool indeterminate() const { return m_indeterminate; }
extern ADDAPI bool MONERO_DeviceProgress_indeterminate(void* deviceProgress_ptr);
//    };
//     virtual ~Wallet() = 0;
//     virtual std::string seed(const std::string& seed_offset = "") const = 0;
extern ADDAPI const char* MONERO_Wallet_seed(void* wallet_ptr, const char* seed_offset);
//     virtual std::string getSeedLanguage() const = 0;
extern ADDAPI const char* MONERO_Wallet_getSeedLanguage(void* wallet_ptr);
//     virtual void setSeedLanguage(const std::string &arg) = 0;
extern ADDAPI void MONERO_Wallet_setSeedLanguage(void* wallet_ptr, const char* arg);
//     virtual int status() const = 0;
extern ADDAPI int MONERO_Wallet_status(void* wallet_ptr);
//     virtual std::string errorString() const = 0;
extern ADDAPI const char* MONERO_Wallet_errorString(void* wallet_ptr);
//     virtual void statusWithErrorString(int& status, std::string& errorString) const = 0;
//     virtual bool setPassword(const std::string &password) = 0;
extern ADDAPI bool MONERO_Wallet_setPassword(void* wallet_ptr, const char* password);
//     virtual const std::string& getPassword() const = 0;
extern ADDAPI const char* MONERO_Wallet_getPassword(void* wallet_ptr);
//     virtual bool setDevicePin(const std::string &pin) { (void)pin; return false; };
extern ADDAPI bool MONERO_Wallet_setDevicePin(void* wallet_ptr, const char* pin);
//     virtual bool setDevicePassphrase(const std::string &passphrase) { (void)passphrase; return false; };
extern ADDAPI bool MONERO_Wallet_setDevicePassphrase(void* wallet_ptr, const char* passphrase);
//     virtual std::string address(uint32_t accountIndex = 0, uint32_t addressIndex = 0) const = 0;
extern ADDAPI const char* MONERO_Wallet_address(void* wallet_ptr, uint64_t accountIndex, uint64_t addressIndex);
//     std::string mainAddress() const { return address(0, 0); }
//     virtual std::string path() const = 0;
extern ADDAPI const char* MONERO_Wallet_path(void* wallet_ptr);
//     virtual NetworkType nettype() const = 0;
extern ADDAPI int MONERO_Wallet_nettype(void* wallet_ptr);
//     bool mainnet() const { return nettype() == MAINNET; }
//     bool testnet() const { return nettype() == TESTNET; }
//     bool stagenet() const { return nettype() == STAGENET; }
//     virtual void hardForkInfo(uint8_t &version, uint64_t &earliest_height) const = 0;
//     virtual bool useForkRules(uint8_t version, int64_t early_blocks) const = 0;  
extern ADDAPI uint8_t MONERO_Wallet_useForkRules(void* wallet_ptr, uint8_t version, int64_t early_blocks);
//     virtual std::string integratedAddress(const std::string &payment_id) const = 0;
extern ADDAPI const char* MONERO_Wallet_integratedAddress(void* wallet_ptr, const char* payment_id);
//     virtual std::string secretViewKey() const = 0;
extern ADDAPI const char* MONERO_Wallet_secretViewKey(void* wallet_ptr);
//     virtual std::string publicViewKey() const = 0;
extern ADDAPI const char* MONERO_Wallet_publicViewKey(void* wallet_ptr);
//     virtual std::string secretSpendKey() const = 0;
extern ADDAPI const char* MONERO_Wallet_secretSpendKey(void* wallet_ptr);
//     virtual std::string publicSpendKey() const = 0;
extern ADDAPI const char* MONERO_Wallet_publicSpendKey(void* wallet_ptr);