impls/monero.rs/src/bindings.rs

extern "C" {
    pub fn MONERO_AddressBook_lookupPaymentID(
        addressBook_ptr: *mut ::std::os::raw::c_void,
        payment_id: *const ::std::os::raw::c_char,
    ) -> ::std::os::raw::c_int;
}
extern "C" {
    pub fn MONERO_CoinsInfo_blockHeight(coinsInfo_ptr: *mut ::std::os::raw::c_void) -> u64;
}
extern "C" {
    pub fn MONERO_CoinsInfo_hash(
        coinsInfo_ptr: *mut ::std::os::raw::c_void,
    ) -> *const ::std::os::raw::c_char;
}
extern "C" {
    pub fn MONERO_CoinsInfo_internalOutputIndex(
        coinsInfo_ptr: *mut ::std::os::raw::c_void,
    ) -> usize;
}
extern "C" {
    pub fn MONERO_CoinsInfo_globalOutputIndex(coinsInfo_ptr: *mut ::std::os::raw::c_void) -> u64;
}
extern "C" {
    pub fn MONERO_CoinsInfo_spent(coinsInfo_ptr: *mut ::std::os::raw::c_void) -> bool;
}
extern "C" {
    pub fn MONERO_CoinsInfo_frozen(coinsInfo_ptr: *mut ::std::os::raw::c_void) -> bool;
}
extern "C" {
    pub fn MONERO_CoinsInfo_spentHeight(coinsInfo_ptr: *mut ::std::os::raw::c_void) -> u64;
}
extern "C" {
    pub fn MONERO_CoinsInfo_amount(coinsInfo_ptr: *mut ::std::os::raw::c_void) -> u64;
}
extern "C" {
    pub fn MONERO_CoinsInfo_rct(coinsInfo_ptr: *mut ::std::os::raw::c_void) -> bool;
}
extern "C" {
    pub fn MONERO_CoinsInfo_keyImageKnown(coinsInfo_ptr: *mut ::std::os::raw::c_void) -> bool;
}
extern "C" {
    pub fn MONERO_CoinsInfo_pkIndex(coinsInfo_ptr: *mut ::std::os::raw::c_void) -> usize;
}
extern "C" {
    pub fn MONERO_CoinsInfo_subaddrIndex(coinsInfo_ptr: *mut ::std::os::raw::c_void) -> u32;
}
extern "C" {
    pub fn MONERO_CoinsInfo_subaddrAccount(coinsInfo_ptr: *mut ::std::os::raw::c_void) -> u32;
}
extern "C" {
    pub fn MONERO_CoinsInfo_address(
        coinsInfo_ptr: *mut ::std::os::raw::c_void,
    ) -> *const ::std::os::raw::c_char;
}
extern "C" {
    pub fn MONERO_CoinsInfo_addressLabel(
        coinsInfo_ptr: *mut ::std::os::raw::c_void,
    ) -> *const ::std::os::raw::c_char;
}
extern "C" {
    pub fn MONERO_CoinsInfo_keyImage(
        coinsInfo_ptr: *mut ::std::os::raw::c_void,
    ) -> *const ::std::os::raw::c_char;
}
extern "C" {
    pub fn MONERO_CoinsInfo_unlockTime(coinsInfo_ptr: *mut ::std::os::raw::c_void) -> u64;
}
extern "C" {
    pub fn MONERO_CoinsInfo_unlocked(coinsInfo_ptr: *mut ::std::os::raw::c_void) -> bool;
}
extern "C" {
    pub fn MONERO_CoinsInfo_pubKey(
        coinsInfo_ptr: *mut ::std::os::raw::c_void,
    ) -> *const ::std::os::raw::c_char;
}
extern "C" {
    pub fn MONERO_CoinsInfo_coinbase(coinsInfo_ptr: *mut ::std::os::raw::c_void) -> bool;
}
extern "C" {
    pub fn MONERO_CoinsInfo_description(
        coinsInfo_ptr: *mut ::std::os::raw::c_void,
    ) -> *const ::std::os::raw::c_char;
}
extern "C" {
    pub fn MONERO_Coins_count(coins_ptr: *mut ::std::os::raw::c_void) -> ::std::os::raw::c_int;
}
extern "C" {
    pub fn MONERO_Coins_coin(
        coins_ptr: *mut ::std::os::raw::c_void,
        index: ::std::os::raw::c_int,
    ) -> *mut ::std::os::raw::c_void;
}
extern "C" {
    pub fn MONERO_Coins_getAll_size(
        coins_ptr: *mut ::std::os::raw::c_void,
    ) -> ::std::os::raw::c_int;
}
extern "C" {
    pub fn MONERO_Coins_getAll_byIndex(
        coins_ptr: *mut ::std::os::raw::c_void,
        index: ::std::os::raw::c_int,
    ) -> *mut ::std::os::raw::c_void;
}
extern "C" {
    pub fn MONERO_Coins_refresh(coins_ptr: *mut ::std::os::raw::c_void);
}
extern "C" {
    pub fn MONERO_Coins_setFrozenByPublicKey(
        coins_ptr: *mut ::std::os::raw::c_void,
        public_key: *const ::std::os::raw::c_char,
    );
}
extern "C" {
    pub fn MONERO_Coins_setFrozen(
        coins_ptr: *mut ::std::os::raw::c_void,
        index: ::std::os::raw::c_int,
    );
}
extern "C" {
    pub fn MONERO_Coins_thaw(coins_ptr: *mut ::std::os::raw::c_void, index: ::std::os::raw::c_int);
}
extern "C" {
    pub fn MONERO_Coins_thawByPublicKey(
        coins_ptr: *mut ::std::os::raw::c_void,
        public_key: *const ::std::os::raw::c_char,
    );
}
extern "C" {
    pub fn MONERO_Coins_isTransferUnlocked(
        coins_ptr: *mut ::std::os::raw::c_void,
        unlockTime: u64,
        blockHeight: u64,
    ) -> bool;
}
extern "C" {
    pub fn MONERO_Coins_setDescription(
        coins_ptr: *mut ::std::os::raw::c_void,
        public_key: *const ::std::os::raw::c_char,
        description: *const ::std::os::raw::c_char,
    );
}
extern "C" {
    pub fn MONERO_SubaddressRow_extra(
        subaddressRow_ptr: *mut ::std::os::raw::c_void,
    ) -> *const ::std::os::raw::c_char;
}
extern "C" {
    pub fn MONERO_SubaddressRow_getAddress(
        subaddressRow_ptr: *mut ::std::os::raw::c_void,
    ) -> *const ::std::os::raw::c_char;
}
extern "C" {
    pub fn MONERO_SubaddressRow_getLabel(
        subaddressRow_ptr: *mut ::std::os::raw::c_void,
    ) -> *const ::std::os::raw::c_char;
}
extern "C" {
    pub fn MONERO_SubaddressRow_getRowId(subaddressRow_ptr: *mut ::std::os::raw::c_void) -> usize;
}
extern "C" {
    pub fn MONERO_Subaddress_getAll_size(
        subaddress_ptr: *mut ::std::os::raw::c_void,
    ) -> ::std::os::raw::c_int;
}
extern "C" {
    pub fn MONERO_Subaddress_getAll_byIndex(
        subaddress_ptr: *mut ::std::os::raw::c_void,
        index: ::std::os::raw::c_int,
    ) -> *mut ::std::os::raw::c_void;
}
extern "C" {
    pub fn MONERO_Subaddress_addRow(
        subaddress_ptr: *mut ::std::os::raw::c_void,
        accountIndex: u32,
        label: *const ::std::os::raw::c_char,
    );
}
extern "C" {
    pub fn MONERO_Subaddress_setLabel(
        subaddress_ptr: *mut ::std::os::raw::c_void,
        accountIndex: u32,
        addressIndex: u32,
        label: *const ::std::os::raw::c_char,
    );
}
extern "C" {
    pub fn MONERO_Subaddress_refresh(
        subaddress_ptr: *mut ::std::os::raw::c_void,
        accountIndex: u32,
    );
}
extern "C" {
    pub fn MONERO_SubaddressAccountRow_extra(
        subaddressAccountRow_ptr: *mut ::std::os::raw::c_void,
    ) -> *const ::std::os::raw::c_char;
}
extern "C" {
    pub fn MONERO_SubaddressAccountRow_getAddress(
        subaddressAccountRow_ptr: *mut ::std::os::raw::c_void,
    ) -> *const ::std::os::raw::c_char;
}
extern "C" {
    pub fn MONERO_SubaddressAccountRow_getLabel(
        subaddressAccountRow_ptr: *mut ::std::os::raw::c_void,
    ) -> *const ::std::os::raw::c_char;
}
extern "C" {
    pub fn MONERO_SubaddressAccountRow_getBalance(
        subaddressAccountRow_ptr: *mut ::std::os::raw::c_void,
    ) -> *const ::std::os::raw::c_char;
}
extern "C" {
    pub fn MONERO_SubaddressAccountRow_getUnlockedBalance(
        subaddressAccountRow_ptr: *mut ::std::os::raw::c_void,
    ) -> *const ::std::os::raw::c_char;
}
extern "C" {
    pub fn MONERO_SubaddressAccountRow_getRowId(
        subaddressAccountRow_ptr: *mut ::std::os::raw::c_void,
    ) -> usize;
}
extern "C" {
    pub fn MONERO_SubaddressAccount_getAll_size(
        subaddressAccount_ptr: *mut ::std::os::raw::c_void,
    ) -> ::std::os::raw::c_int;
}
extern "C" {
    pub fn MONERO_SubaddressAccount_getAll_byIndex(
        subaddressAccount_ptr: *mut ::std::os::raw::c_void,
        index: ::std::os::raw::c_int,
    ) -> *mut ::std::os::raw::c_void;
}
extern "C" {
    pub fn MONERO_SubaddressAccount_addRow(
        subaddressAccount_ptr: *mut ::std::os::raw::c_void,
        label: *const ::std::os::raw::c_char,
    );
}
extern "C" {
    pub fn MONERO_SubaddressAccount_setLabel(
        subaddressAccount_ptr: *mut ::std::os::raw::c_void,
        accountIndex: u32,
        label: *const ::std::os::raw::c_char,
    );
}
extern "C" {
    pub fn MONERO_SubaddressAccount_refresh(subaddressAccount_ptr: *mut ::std::os::raw::c_void);
}
extern "C" {
    pub fn MONERO_MultisigState_isMultisig(multisigState_ptr: *mut ::std::os::raw::c_void) -> bool;
}
extern "C" {
    pub fn MONERO_MultisigState_isReady(multisigState_ptr: *mut ::std::os::raw::c_void) -> bool;
}
extern "C" {
    pub fn MONERO_MultisigState_threshold(multisigState_ptr: *mut ::std::os::raw::c_void) -> u32;
}
extern "C" {
    pub fn MONERO_MultisigState_total(multisigState_ptr: *mut ::std::os::raw::c_void) -> u32;
}
extern "C" {
    pub fn MONERO_DeviceProgress_progress(deviceProgress_ptr: *mut ::std::os::raw::c_void) -> bool;
}
extern "C" {
    pub fn MONERO_DeviceProgress_indeterminate(
        deviceProgress_ptr: *mut ::std::os::raw::c_void,
    ) -> bool;
}
pub const WalletDevice_Software: ::std::os::raw::c_int = 0;
pub const WalletDevice_Ledger: ::std::os::raw::c_int = 1;
pub const WalletDevice_Trezor: ::std::os::raw::c_int = 2;
pub const WalletStatus_Ok: ::std::os::raw::c_int = 0;
pub const WalletStatus_Error: ::std::os::raw::c_int = 1;
pub const WalletStatus_Critical: ::std::os::raw::c_int = 2;
pub const WalletConnectionStatus_Disconnected: ::std::os::raw::c_int = 0;
pub const WalletConnectionStatus_Connected: ::std::os::raw::c_int = 1;
pub const WalletConnectionStatus_WrongVersion: ::std::os::raw::c_int = 2;
pub const WalletBackgroundSync_Off: ::std::os::raw::c_int = 0;
pub const WalletBackgroundSync_ReusePassword: ::std::os::raw::c_int = 1;
pub const BackgroundSync_CustomPassword: ::std::os::raw::c_int = 2;
extern "C" {
    pub fn MONERO_Wallet_seed(
        wallet_ptr: *mut ::std::os::raw::c_void,
        seed_offset: *const ::std::os::raw::c_char,
    ) -> *const ::std::os::raw::c_char;
}
extern "C" {
    pub fn MONERO_Wallet_getSeedLanguage(
        wallet_ptr: *mut ::std::os::raw::c_void,
    ) -> *const ::std::os::raw::c_char;
}
extern "C" {
    pub fn MONERO_Wallet_setSeedLanguage(
        wallet_ptr: *mut ::std::os::raw::c_void,
        arg: *const ::std::os::raw::c_char,
    );
}
extern "C" {
    pub fn MONERO_Wallet_status(wallet_ptr: *mut ::std::os::raw::c_void) -> ::std::os::raw::c_int;
}
extern "C" {
    pub fn MONERO_Wallet_errorString(
        wallet_ptr: *mut ::std::os::raw::c_void,
    ) -> *const ::std::os::raw::c_char;
}
extern "C" {
    pub fn MONERO_Wallet_setPassword(
        wallet_ptr: *mut ::std::os::raw::c_void,
        password: *const ::std::os::raw::c_char,
    ) -> bool;
}
extern "C" {
    pub fn MONERO_Wallet_getPassword(
        wallet_ptr: *mut ::std::os::raw::c_void,
    ) -> *const ::std::os::raw::c_char;
}
extern "C" {
    pub fn MONERO_Wallet_setDevicePin(
        wallet_ptr: *mut ::std::os::raw::c_void,
        pin: *const ::std::os::raw::c_char,
    ) -> bool;
}
extern "C" {
    pub fn MONERO_Wallet_setDevicePassphrase(
        wallet_ptr: *mut ::std::os::raw::c_void,
        passphrase: *const ::std::os::raw::c_char,
    ) -> bool;
}
extern "C" {
    pub fn MONERO_Wallet_address(
        wallet_ptr: *mut ::std::os::raw::c_void,
        accountIndex: u64,
        addressIndex: u64,
    ) -> *const ::std::os::raw::c_char;
}
extern "C" {
    pub fn MONERO_Wallet_path(
        wallet_ptr: *mut ::std::os::raw::c_void,
    ) -> *const ::std::os::raw::c_char;
}
extern "C" {
    pub fn MONERO_Wallet_nettype(wallet_ptr: *mut ::std::os::raw::c_void) -> ::std::os::raw::c_int;
}
extern "C" {
    pub fn MONERO_Wallet_useForkRules(
        wallet_ptr: *mut ::std::os::raw::c_void,
        version: u8,
        early_blocks: i64,
    ) -> u8;
}
extern "C" {
    pub fn MONERO_Wallet_integratedAddress(
        wallet_ptr: *mut ::std::os::raw::c_void,
        payment_id: *const ::std::os::raw::c_char,
    ) -> *const ::std::os::raw::c_char;
}
extern "C" {
    pub fn MONERO_Wallet_secretViewKey(
        wallet_ptr: *mut ::std::os::raw::c_void,
    ) -> *const ::std::os::raw::c_char;
}
extern "C" {
    pub fn MONERO_Wallet_publicViewKey(
        wallet_ptr: *mut ::std::os::raw::c_void,
    ) -> *const ::std::os::raw::c_char;
}
extern "C" {
    pub fn MONERO_Wallet_secretSpendKey(
        wallet_ptr: *mut ::std::os::raw::c_void,
    ) -> *const ::std::os::raw::c_char;
}
extern "C" {
    pub fn MONERO_Wallet_publicSpendKey(
        wallet_ptr: *mut ::std::os::raw::c_void,
    ) -> *const ::std::os::raw::c_char;
}
